xee-xslt-ast/src/snapshots/xee_xslt_ast__parse__tests__boolean_default_no_with_explicit_yes.snap
---
source: xee-xslt-ast/src/parse.rs
expression: "parse(r#\"<variable name=\"foo\" static=\"yes\" as=\"xs:string\" select=\"true()\">Hello</variable>\"#)"
---
Ok(Variable(Variable(
  name: "foo",
  select: Some(Expression(
    xpath: XPath(Expr([
      Path(PathExpr(
        steps: [
          PrimaryExpr(FunctionCall(FunctionCall(
            name: Name(
              name: "true",
              prefix: None,
              namespace: Some("http://www.w3.org/2005/xpath-functions"),
            ),
            arguments: [],
          ))),
        ],
      )),
    ])),
    span: Span(
      start: 57,
      end: 63,
    ),
  )),
  as_: Some(Item(Item(
    item_type: AtomicOrUnionType(String),
    occurrence: One,
  ))),
  static_: true,
  visibility: None,
  content: [
    TextNode("Hello"),
  ],
  span: Span(
    start: 1,
    end: 9,
  ),
)))
