xee-xslt-ast/src/snapshots/xee_xslt_ast__parse__tests__broken_xpath.snap
---
source: xee-xslt-ast/src/parse.rs
expression: "parse(r#\"<variable name=\"foo\" select=\"let $x := 1\">Hello</variable>\"#)"
---
Err(XPath(ExpectedFound(
  span: SimpleSpan(
    start: 39,
    end: 40,
    context: (),
  ),
)))
