xee-xslt-ast/src/snapshots/xee_xslt_ast__parse__tests__eqnames.snap
---
source: xee-xslt-ast/src/parse.rs
expression: "parse(r#\"<xsl:copy xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\" use-attribute-sets=\"foo bar baz\">Hello</xsl:copy>\"#)"
---
Ok(Copy(Copy(
  select: None,
  copy_namespaces: true,
  inherit_namespaces: true,
  use_attribute_sets: Some([
    "foo",
    "bar",
    "baz",
  ]),
  type_: None,
  validation: Strip,
  content: [
    TextNode("Hello"),
  ],
  standard: Standard(
    default_collation: None,
    default_mode: None,
    default_validation: None,
    exclude_result_prefixes: None,
    expand_text: None,
    extension_element_prefixes: None,
    use_when: None,
    version: None,
    xpath_default_namespace: None,
  ),
  span: Span(
    start: 1,
    end: 9,
  ),
)))
