xee-xslt-ast/src/snapshots/xee_xslt_ast__parse__tests__literal_result_element.snap
---
source: xee-xslt-ast/src/parse.rs
expression: "parse(r#\"<foo/>\"#)"
---
Ok(ElementNode(ElementNode(
  name: Name(
    namespace: "",
    local: "foo",
  ),
  standard: Standard(
    default_collation: None,
    default_mode: None,
    default_validation: None,
    exclude_result_prefixes: None,
    expand_text: None,
    extension_element_prefixes: None,
    use_when: None,
    version: None,
    xpath_default_namespace: None,
  ),
  span: Span(
    start: 1,
    end: 4,
  ),
)))
