xee-xslt-ast/src/snapshots/xee_xslt_ast__parse__tests__missing_required.snap
---
source: xee-xslt-ast/src/parse.rs
expression: "parse(r#\"<variable select=\"true()\">Hello</variable>\"#)"
---
Err(AttributeExpected(
  namespace: "",
  local: "name",
  span: Span(
    start: 1,
    end: 9,
  ),
))
