xee-xslt-ast/src/snapshots/xee_xslt_ast__parse__tests__nested_if.snap
---
source: xee-xslt-ast/src/parse.rs
expression: "parse(r#\"<xsl:if xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\" test=\"true()\"><xsl:if test=\"true()\">Hello</xsl:if></xsl:if>\"#)"
---
Ok(If(If(
  test: Expression(
    xpath: XPath(Expr([
      Path(PathExpr(
        steps: [
          PrimaryExpr(FunctionCall(FunctionCall(
            name: Name(
              name: "true",
              prefix: None,
              namespace: Some("http://www.w3.org/2005/xpath-functions"),
            ),
            arguments: [],
          ))),
        ],
      )),
    ])),
    span: Span(
      start: 63,
      end: 69,
    ),
  ),
  content: [
    If(If(
      test: Expression(
        xpath: XPath(Expr([
          Path(PathExpr(
            steps: [
              PrimaryExpr(FunctionCall(FunctionCall(
                name: Name(
                  name: "true",
                  prefix: None,
                  namespace: Some("http://www.w3.org/2005/xpath-functions"),
                ),
                arguments: [],
              ))),
            ],
          )),
        ])),
        span: Span(
          start: 85,
          end: 91,
        ),
      ),
      content: [
        TextNode("Hello"),
      ],
      standard: Standard(
        default_collation: None,
        default_mode: None,
        default_validation: None,
        exclude_result_prefixes: None,
        expand_text: None,
        extension_element_prefixes: None,
        use_when: None,
        version: None,
        xpath_default_namespace: None,
      ),
      span: Span(
        start: 72,
        end: 78,
      ),
    )),
  ],
  standard: Standard(
    default_collation: None,
    default_mode: None,
    default_validation: None,
    exclude_result_prefixes: None,
    expand_text: None,
    extension_element_prefixes: None,
    use_when: None,
    version: None,
    xpath_default_namespace: None,
  ),
  span: Span(
    start: 1,
    end: 7,
  ),
)))
